CB-4018 fix: remove gap in data viewer toolbar

--- a/webapp/packages/plugin-data-viewer/src/TableViewer/TableFooter/TableFooterMenu/TableFooterMenuBarItemStyles.module.css
+++ b/webapp/packages/plugin-data-viewer/src/TableViewer/TableFooter/TableFooterMenu/TableFooterMenuBarItemStyles.module.css
@@ -9,10 +9,6 @@
 .tableFooterMenu .menuBarItem {
   padding: 0 4px;
 
-  & .menuBarItemBox {
-    gap: 2px;
-  }
-
   & .menuBarItemLabel {
     padding: 0;
   }
